# log-analyzer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  dev-requirements.txt  pyproject.toml
log_analyzer/: arguments.py  cli.py  log_analyzer.py
log_analyzer/operations/: base_operation.py  bytes.py  eps.py  ip_frequency.py
log_analyzer/parsers/: base_parser.py  custom_csv_parser.py  schema.py
log_analyzer/readers/: base_reader.py  file_reader.py
log_analyzer/reporters/: base_reporter.py  json_reporter.py
log_analyzer/utils/: collection.py  logger.py
tests/: test_log_analyzer.py  test_operations.py  test_parsers.py  test_reporters.py
